# yral-spacetime

./: Cargo.toml  flake.nix
.devcontainer/nix/: devcontainer.json
.github/workflows/: backend-preview.yml  backend-prod.yml  canisters-preview.yml  canisters-prod.yml  dedup-index-preview.yml  dedup-index-prod.yml
backend/: Cargo.toml
backend/src/: consts_store.rs  dolr_airdrop.rs  lib.rs  notification_store.rs  sats_airdrop.rs  sats_store.rs
canisters/: Cargo.toml
canisters/src/: lib.rs
client-bindings/: Cargo.toml
client-bindings/src/: lib.rs
client-bindings/src/autogenerated/: mod.rs
client-bindings/src/autogenerated/backend/: add_notification_reducer.rs  add_to_withdraw_amount_reducer.rs  dolr_airdrop_info_table.rs  dolr_airdrop_info_type.rs  liked_payload_type.rs  mark_airdrop_claimed_reducer.rs  mark_as_read_reducer.rs  mark_sats_airdrop_claimed_reducer.rs  mod.rs  notification_data_type.rs  notification_prune_schedule_table.rs  notification_prune_schedule_type.rs  notification_table.rs  notification_type.rs  notification_type_type.rs  notifications_table.rs  notifications_type.rs  prune_notifications_reducer.rs  sats_airdrop_info_table.rs  sats_airdrop_info_type.rs  video_upload_payload_type.rs  withdrawal_info_table.rs  withdrawal_info_type.rs
dedup-index/: Cargo.toml
dedup-index/src/: lib.rs  server.rs
dedup-index/src/client/: mod.rs  unique_hash_type.rs
sats-store/: Cargo.toml
sats-store/src/: lib.rs
utils/: Cargo.toml
utils/src/: consts.rs  error.rs  lib.rs
yral/src/: lib.rs
yral/src/types/: users.rs
(+23 files in other folders)
