[package]
name = "dedup_index"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
spacetimedb = { workspace = true, optional = true }
log = { workspace = true }
spacetimedb-sdk = { workspace = true, optional = true }
utils = { workspace = true }

[features]
default = ["server"]
server = ["dep:spacetimedb"]
client = ["dep:spacetimedb-sdk"]
